automatically vertically centering current image name and fixed alignment issue with the label list title bottom border

--- a/styles.css
+++ b/styles.css
@@ -637,6 +637,7 @@
 }
 
 .right-side-bar-component-title {
+  height: 18px;
   font-size: 16px;
   padding-left: 5px;
   border-bottom: solid;
@@ -886,13 +887,20 @@ body {
   height: 29px;
   text-align: center;
   user-select: none;
+  position: relative;
 }
 
 #image-switch-contents {
-  padding-top: 6.25px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  height: 17px;
+  position: absolute;
 }
 
-#currentImageName {
+#current-image-name {
   display: inline-block;
   padding-left: 20px;
   padding-right: 20px;
